--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,9 @@
+<h1>My Lists</h1>
+
 <ul>
   <% @lists.each do |list| %>
     <li><%= list.name %></li>
   <% end %>
 </ul>
+
+<a href="/lists/new" class="btn btn-success">Add new list</a>
