--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,9 @@
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.input :comment, placeholder: "Write your comment here" %>
-  <%= f.association :movie, collection: Movie.all %>
-  <%= f.submit %>
-<% end %>
+<h1>Bookmarks</h1>
+
+<div>
+  <%= simple_form_for [@list, @bookmark] do |f| %>
+    <%= f.input :comment, placeholder: "Write your comment here" %>
+    <%= f.association :movie, collection: Movie.all %>
+    <%= f.submit %>
+  <% end %>
+</div>
