--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -4,6 +4,6 @@
   <%= simple_form_for [@list, @bookmark] do |f| %>
     <%= f.input :comment, placeholder: "Write your comment here" %>
     <%= f.association :movie, collection: Movie.all %>
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-flat"%>
   <% end %>
 </div>
