--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,1 +1,9 @@
-<h2><%= @list.name %></h2>
+<div class = "banner">
+  <h2><%= @list.name %></h2>
+</div>
+<%# <div>
+
+</div> %>
+
+
+<%= link_to "Go back to lists", "/lists", class: "btn btn-flat" %>
